[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdmath"
version = "0.0.1"
description = "Math in markdown to latex or html"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "David Lowry-Duda", email = "david@lowryduda.com" }
]
keywords = ["markdown", "html", "latex", "converter"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mistune",
    "pygments",
]

[project.scripts]
mdconv = "mdmath.cli:main"
